@startuml

class UserResource {
    +getAll(): User[]
    +getById(id: int) User
    +add(user: User)
}


class UserServiceDefault {
     +addUser(user: User)
     +getAllUsers(): User[]
     +getUserById(id: int): User
}

class UserMysqlDao {
    +save(user: User)
    +findAll(): User[]
    +findOne(id: int): User
}

allowmixing
database userdb

UserResource *-- UserServiceDefault
UserServiceDefault *-- UserMysqlDao
UserMysqlDao <--> userdb

@enduml